# financial-helper

./: README.md  main.py  pyproject.toml
backend/: get_files.py  graph.py  hybrid_index.py  hybrid_retriever.py  llm.py  prompt.py  section_chunker.py  state.py  test_retriver.py
indexes/0000320193/: bm25_corpus.pkl  chunks.pkl
