[project]
name = "ubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "edgar>=5.6.3",
    "edgartools>=5.41.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.8",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
